--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
+  firebase_auth: ^5.1.1
+  firebase_core: ^3.1.1
+  cloud_firestore: ^5.0.2
+  top_snackbar_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
