home screen updated

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,12 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    }
+
 android {
     namespace = "com.example.ai_chatbot"
     compileSdk = flutter.compileSdkVersion
@@ -44,6 +50,14 @@ android {
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+            }
+        }
 
     buildTypes {
         release {
@@ -52,6 +66,14 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    // Add language package you need to use
+//    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
+//    implementation 'com.google.mlkit:text-recognition-Nepali:16.0.0-beta6'
+//    implementation 'com.google.mlkit:text-recognition-English:16.0.0-beta6'
+//    implementation 'com.google.mlkit:text-recognition-Hindi:16.0.0-beta6'
 }
 
 flutter {
