--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,26 @@ dependencies:
   firebase_auth: ^5.1.1
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
-  top_snackbar_flutter: ^3.1.0
+  firebase_storage: ^12.1.0
+  google_generative_ai: ^0.4.3
+  speech_to_text: ^6.6.2
+  image_picker: ^1.1.2
+  path_provider: ^2.1.3
+  flutter_spinkit: ^5.2.1
+  flutter_tts: ^4.0.2
+  image_cropper: ^7.1.0
+  google_mlkit_text_recognition: ^0.13.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/launcher_icon.jpeg"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -82,10 +97,24 @@ flutter:
      - family: Roboto Slab
        fonts:
          - asset: assets/fonts/RobotoSlab-VariableFont_wght.ttf
+
      - family: Tiny5
        fonts:
          - asset: assets/fonts/Tiny5-Regular.ttf
            weight: 700
+
+     - family: PoetsenOne
+       fonts:
+         - asset: assets/fonts/PoetsenOne-Regular.ttf
+
+     - family: Silkscreen
+       fonts:
+          - asset: assets/fonts/Silkscreen-Regular.ttf
+          - asset: assets/fonts/Silkscreen-Bold.ttf
+
+     - family: Rye
+       fonts:
+          - asset: assets/fonts/Rye-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
